--- a/MatchTool/MatchTool.vcxproj
+++ b/MatchTool/MatchTool.vcxproj
@@ -88,7 +88,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_4.X|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
@@ -160,9 +160,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_4.X|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\OpenCV4.5\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenCV4.5\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
-    <OutDir>C:\OpenCV4.5\opencv\build\x64\vc14\bin</OutDir>
+    <IncludePath>G:\opencv\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>G:\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <OutDir>G:\opencv\build\x64\vc14\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -318,6 +318,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <AdditionalIncludeDirectories>G:\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
